    modifier. (Guilherme Blanco)
  . is_long() & is_integer() is now an alias of is_int(). (Kalle)
  . Implemented FR #55467 (phpinfo: PHP Variables with $ and single quotes). (Kalle)
  . Fixed bug #55415 (php_info produces invalid anchor names). (Kalle, Johannes)
  . Added ?? operator. (Andrea)
  . Added \u{xxxxx} Unicode Codepoint Escape Syntax. (Andrea)

- Date:
  . Fixed day_of_week function as it could sometimes return negative values
    internally. (Derick)

- DBA:
  . Fixed bug #62490 (dba_delete returns true on missing item (inifile)). (Mike)

- DOM:
  . Made DOMNode::textContent writeable. (Tjerk)

- GD:
  . Made fontFetch's path parser thread-safe. (Sara)

- Fileinfo:
  . Fixed bug #66242 (libmagic: don't assume char is signed). (ArdB)

- Filter:
  . New FILTER_VALIDATE_DOMAIN and better RFC conformance for FILTER_VALIDATE_URL. (Kevin Dunglas)

- FPM:
  . Fixed bug #65933 (Cannot specify config lines longer than 1024 bytes). (Chris Wright)
  . Implement request #67106 (Split main fpm config). (Elan Ruusamäe, Remi)

- LiteSpeed:
  . Updated LiteSpeed SAPI code from V5.5 to V6.6. (George Wang)

- Mcrypt:
  . Fixed possible read after end of buffer and use after free. (Dmitry)

- pcntl:
  . Fixed bug #60509 (pcntl_signal doesn't decrease ref-count of old handler
    when setting SIG_DFL). (Julien)

- PDO_mysql:
  . Fixed bug #68424 (Add new PDO mysql connection attr to control multi
    statements option). (peter dot wolanin at acquia dot com)

- Reflection
  . Fixed inheritance chain of Reflector interface (Tjerk)

- Session:
  . Fixed bug #67694 (Regression in session_regenerate_id()). (Tjerk)

- SOAP:
  . Fixed bug #68361 (Segmentation fault on SoapClient::__getTypes).
    (Laruence)

- SPL:
  . Implemented #67886 (SplPriorityQueue/SplHeap doesn't expose extractFlags
    nor curruption state). (Julien)
  . Fixed bug #66405 (RecursiveDirectoryIterator::CURRENT_AS_PATHNAME
    breaks the RecursiveIterator). (Paul Garvin)